# seamless-configs

./: README.md  Versioned_install.md  generate_schedule.sh  meson.build  meson.options  meson_options.txt
EN325/: meson.build
EN325/ambisonics/: meson.build
EN325/ambisonics/config/: AllRADecoder.settings  DistanceCompensator.settings
EN325/ambisonics/systemd/: allra_decoder.service  distance_compensator.service
EN325/audio-matrix/: meson.build
EN325/audio-matrix/riviera/: audio-matrix_conf.yml
EN325/audio-matrix/wintermute/: audio-matrix_conf.yml
EN325/jack/: jack.conf
EN325/jack-connection-manager/: meson.build
EN325/jack-connection-manager/riviera/: connections.yml
EN325/osc-kreuz/: meson.build  osc-kreuz_conf.yml
EN325/wonder/: cluster.conf  meson.build
EN325/wonder/cwonder/: cwonder_config.xml
EN325/wonder/twonder/riviera/speaker-positions/: twonder_speakerarray_01.xml  twonder_speakerarray_02.xml  twonder_speakerarray_03.xml  twonder_speakerarray_04.xml
EN325/wonder/twonder/riviera/systemd/: twonder.target
EN325/wonder/twonder/wintermute/speaker-positions/: twonder_speakerarray_01.xml  twonder_speakerarray_02.xml  twonder_speakerarray_03.xml  twonder_speakerarray_04.xml  twonder_speakerarray_05.xml  twonder_speakerarray_06.xml  twonder_speakerarray_07.xml  twonder_speakerarray_08.xml
EN325/wonder/twonder/wintermute/systemd/: twonder.target
H0104/: meson.build
H0104/audio-matrix/: meson.build
H0104/audio-matrix/player/: audio-matrix_conf.yml
H0104/audio-matrix/renderer/: audio-matrix_conf.yml
H0104/jack/: jack.conf
H0104/jack-connection-manager/: meson.build
H0104/jack-connection-manager/player/: connections.yml
H0104/jack-connection-manager/renderer/: connections.yml
H0104/osc-kreuz/: osc-kreuz_conf.yml
H0104/systemd/user/: jack_dante.service
H0104/wonder/: cluster.conf  meson.build
H0104/wonder/cwonder/: cwonder_config.xml
H0104/wonder/twonder/: twonder_config.xml
H0104/wonder/twonder/renderer01/speaker-positions/: twonder_speakerarray_02.xml  twonder_speakerarray_06.xml  twonder_speakerarray_08.xml  twonder_speakerarray_10.xml  twonder_speakerarray_11.xml
H0104/wonder/twonder/renderer02/speaker-positions/: twonder_speakerarray_01.xml  twonder_speakerarray_04.xml  twonder_speakerarray_06.xml  twonder_speakerarray_09.xml
H0104/wonder/twonder/renderer03/speaker-positions/: twonder_speakerarray_01.xml  twonder_speakerarray_02.xml  twonder_speakerarray_04.xml  twonder_speakerarray_08.xml  twonder_speakerarray_09.xml  twonder_speakerarray_11.xml
H0104/wonder/twonder/renderer04/speaker-positions/: twonder_speakerarray_01.xml  twonder_speakerarray_02.xml  twonder_speakerarray_05.xml  twonder_speakerarray_06.xml  twonder_speakerarray_07.xml  twonder_speakerarray_09.xml  twonder_speakerarray_11.xml
H0104/wonder/twonder/renderer05/speaker-positions/: twonder_speakerarray_02.xml  twonder_speakerarray_04.xml  twonder_speakerarray_05.xml  twonder_speakerarray_06.xml  twonder_speakerarray_07.xml
H0104/wonder/twonder/renderer1/speaker-positions/: twonder_speakerarray_01.xml  twonder_speakerarray_02.xml  twonder_speakerarray_03.xml  twonder_speakerarray_04.xml  twonder_speakerarray_05.xml  twonder_speakerarray_06.xml  twonder_speakerarray_07.xml  twonder_speakerarray_08.xml  twonder_speakerarray_09.xml  twonder_speakerarray_10.xml  twonder_speakerarray_11.xml  twonder_speakerarray_12.xml
H0104/wonder/twonder/renderer2/speaker-positions/: twonder_speakerarray_01.xml  twonder_speakerarray_02.xml  twonder_speakerarray_03.xml  twonder_speakerarray_04.xml  twonder_speakerarray_05.xml  twonder_speakerarray_06.xml  twonder_speakerarray_07.xml  twonder_speakerarray_08.xml  twonder_speakerarray_09.xml  twonder_speakerarray_10.xml  twonder_speakerarray_11.xml  twonder_speakerarray_12.xml
H0104/wonder/twonder/renderer3/speaker-positions/: twonder_speakerarray_01.xml  twonder_speakerarray_02.xml  twonder_speakerarray_03.xml  twonder_speakerarray_04.xml  twonder_speakerarray_05.xml  twonder_speakerarray_06.xml  twonder_speakerarray_07.xml  twonder_speakerarray_08.xml  twonder_speakerarray_09.xml  twonder_speakerarray_10.xml  (+2 more)
HUFO/: meson.build
HUFO/ambisonics/: meson.build
HUFO/ambisonics/config/: AllRADecoder.settings  DistanceCompensator.settings
HUFO/ambisonics/systemd/: allra_decoder.service
HUFO/audio-matrix/: meson.build
HUFO/audio-matrix/renderer-ambi/: audio-matrix_conf.yml
HUFO/audio-matrix/renderer-wfs/: audio-matrix_conf.yml
HUFO/jack/: jack.conf
HUFO/jack-connection-manager/: meson.build
HUFO/jack-connection-manager/player/: connections.yml
HUFO/jack-connection-manager/renderer-ambi/: connections.yml
HUFO/jack-connection-manager/renderer-wfs/: connections.yml
HUFO/osc-kreuz/: osc-kreuz_conf.yml
HUFO/showcontrol/: meson.build
HUFO/showcontrol/config/: blockplan.yml  schedule.yml  showcontrol_config.yml
HUFO/showcontrol/config/blocks/: block_a.yml  block_b.yml  cluster_familie.yml
HUFO/showcontrol/config/tracks/: esdunkeltschon.yml  esdunkeltschon_part1.yml  esdunkeltschon_part2.yml  esdunkeltschon_part3.yml  neu.yml  pagtatahip.yml  pagtataip.yml  peru.yml  theoverflowingarchive.yml
HUFO/showcontrol/readable_schedules/: hufoprogram_2025-12-02_full_schedule.txt  hufoprogram_2025-12-02_track_schedule.txt  hufoprogram_2025-12-08_track_schedule.txt  hufoprogram_2025-12-09_full_schedule.txt  hufoprogram_2025-12-09_track_schedule.txt
HUFO/wonder/: cluster.conf  meson.build
HUFO/wonder/twonder/renderer02/speaker-positions/: twonder_speakerarray_01.xml  twonder_speakerarray_02.xml  twonder_speakerarray_03.xml  twonder_speakerarray_04.xml  twonder_speakerarray_05.xml  twonder_speakerarray_06.xml  twonder_speakerarray_07.xml  twonder_speakerarray_08.xml
HUFO/wonder/twonder/renderer03/speaker-positions/: twonder_speakerarray_01.xml  twonder_speakerarray_02.xml  twonder_speakerarray_03.xml  twonder_speakerarray_04.xml  twonder_speakerarray_05.xml  twonder_speakerarray_06.xml  twonder_speakerarray_07.xml  twonder_speakerarray_08.xml
systemd/user/: jack.service  systemreboot.service
(+24 files in other folders)
