message('Installing configuration files for the TU-Studio EN325.')
message('The configuration files are installed to ' + get_option('prefix') + '/' + get_option('sysconfdir') + '.')

message('This is the node: ' + get_option('node'))

install_subdir('jack', install_dir: get_option('sysconfdir'))
subdir('wonder')